# trezoa-perf-libs

./: LICENSE  README.md
ci/: build.sh  docker-run.sh  env.sh
ci/docker-sgx/: build.sh
src/cuda-ecc-ed25519/: verify.cu
src/jerasure-sys/: Cargo.toml
src/opencl-ecc-ed25519/: verify.cpp
src/opencl-platform/: kernels_sha256.h
src/sgx/signing/: signing.edl  signing_trusted.c  signing_untrusted.c
