[package]
name = "jerasure-sys"
description = "Rust bindings for jerasure 2.0"
version = "0.1.0"
homepage = "https://trezoa.com/"
readme = "../jerasure/README"
repository = "https://github.com/trezoa-labs/trezoa-perf-libs"
authors = ["Trezoa Maintainers <maintainers@trezoa.com>"]
license = "../jerasure/COPYING"
links = "Jerasure"
build = "build.rs"

[build-dependencies]
cc = "1.0"
